--- a/src/assets/scss/setting/_reset.scss
+++ b/src/assets/scss/setting/_reset.scss
@@ -43,21 +43,9 @@ h1 {
   font-size: 2em;
 }
 
-pre {
-  font-family: monospace;
-  font-size: 1em;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-code,
-kbd,
-samp {
-  font-family: monospace;
-  font-size: 1em;
+em,
+address {
+  font-style: normal;
 }
 
 code {
@@ -68,18 +56,6 @@ code {
   background-color: var(--color-surface50);
   color: var(--color-surface-white);
   border-radius: 6px;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
 }
 
 /* 수평 가로선 */
@@ -105,10 +81,7 @@ button {
 
 .button {
   align-items: center;
-  // background: 0 0;
-  // border: none;
   border-radius: 6.25rem;
-  // color: var(--button-color, var(--button-stroke));
   cursor: pointer;
   display: inline-flex;
   font-size: max(1rem, min(0.38835vw + 0.908981rem, 1.375rem));
@@ -132,8 +105,8 @@ button {
     width: 20vw;
     height: 20vw;
     position: absolute;
-    top: -80%;
-    right: 100%;
+    top: 10%;
+    right:70%;
     background-color: var(--color-surface-white);
     border-radius: 20vw;
     transition: all 0.4s;
@@ -142,7 +115,7 @@ button {
 
   &:hover {
     &::before {
-      top: -200%;
+      top: -130%;
       transform: translateX(70%);
     }
 
@@ -182,204 +155,10 @@ form {
   position: relative;
 }
 
-abbr[title] {
-  border-bottom: none;
-  -webkit-text-decoration: underline dotted;
-  text-decoration: underline dotted;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-img {
-  border-style: none;
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-
-button,
-input {
-  overflow: visible;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-[type="button"],
-[type="reset"],
-[type="submit"],
-button {
-  -webkit-appearance: button;
-}
-
-[type="button"]::-moz-focus-inner,
-button::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-[type="button"]:-moz-focusring,
-button:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-fieldset {
-  border: none;
-  margin: 0;
-  padding: 0;
-}
-
-legend {
-  box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-textarea {
-  overflow: auto;
-}
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
-
-summary {
-  display: list-item;
-}
-
-[hidden],
-template {
-  display: none;
-}
-
 input,
 select,
 textarea {
   width: 100%;
-}
-
-input[type="checkbox"],
-input[type="radio"],
-input[type="submit"] {
-  width: auto;
-}
-
-label {
-  margin-bottom: 0.375rem;
-}
-
-label .req {
-  color: var(--color-shockingly-green);
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"],
-select {
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid var(--color-surface50);
-  padding: 1rem 0;
-}
-
-input[type="email"]:-webkit-autofill,
-input[type="text"]:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
-}
-
-input[type="number"]:-webkit-autofill,
-input[type="password"]:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
-}
-
-input[type="tel"]:-webkit-autofill,
-input[type="url"]:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
-}
-
-select:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 50px var(--color-surface-white) inset;
-}
-
-::-moz-placeholder {
-  color: var(--color-just-black);
-}
-
-::placeholder {
-  color: var(--color-just-black);
-}
-
-.field {
-  margin-top: max(1.5rem, min(1.0356vw + 1.25728rem, 2.5rem));
-}
-
-button {
-  background-color: transparent;
-  border: none;
 }
 
 /* body 초기화 */
@@ -398,15 +177,6 @@ a {
 main {
   position: relative;
   z-index: 1;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 400;
 }
 
 /* 스킵메뉴 */
