--- a/src/assets/scss/section/_projects.scss
+++ b/src/assets/scss/section/_projects.scss
@@ -47,7 +47,7 @@
     // z-index: 1;
     margin: 0 auto;
 
-    top: -40px;
+    top: -22px;
     left: -40%;
     position: relative;
     // padding-bottom: 100px;
@@ -69,9 +69,10 @@
             // height: auto;
             // width: 1151.88px;
             // height: 691.13;
+            border-radius: 0.5rem;
 
-            img {
-              // border-radius: 0.5rem;
+            video {
+              border-radius: 0.5rem;
               // background-color: pink;
             }
           }
@@ -102,8 +103,7 @@
       // padding-right: 6.25vw;
       // position: relative;
       margin: 0 auto;
-      margin-top: -50px;
-      margin-left: 64%;
+      margin-left: 63%;
       width: 33.33%;
       height: auto;
 
@@ -123,6 +123,7 @@
         font-weight: 400;
         letter-spacing: -0.01em;
         line-height: 1.4;
+        margin-top: 10px;
         margin-bottom: 2rem;
 
         @media only screen and (min-width: 77.5rem) {
@@ -132,9 +133,13 @@
 
       .projects__menu-item--button {
         .button {
-          font-size: max(1rem,min(.38835vw + .908981rem,1.375rem));
+          font-size: max(1rem, min(0.38835vw + 0.908981rem, 1.375rem));
           padding: 0.9375rem 1.5rem;
           border: 0.125rem solid var(--color-surface-white);
+
+          .button__label {
+            padding-top: 2px;
+          }
 
           &:nth-child(1) {
             margin-right: 10px;
