--- a/src/assets/scss/section/_footer.scss
+++ b/src/assets/scss/section/_footer.scss
@@ -1,193 +1,86 @@
 .footer {
-  background-color: var(--color-just-black);
-  position: relative;
-  padding: unset !important;
-  border-top: 0.0625rem solid var(--color-surface25);
-  color: var(--color-surface75);
-
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 120rem;
-    padding-left: max(1.5rem, min(6.73139vw - 0.0776699rem, 8rem));
-    padding-right: max(1.5rem, min(6.73139vw - 0.0776699rem, 8rem));
-    padding-bottom: max(3rem, min(1.0356vw + 2.75728rem, 4rem));
-    padding-top: max(3rem, min(1.0356vw + 2.75728rem, 4rem));
-  }
-
-  .footer-global {
-    background-color: var(--color-surface-white);
-    color: var(--color-just-black);
-  }
-}
-
-.footer ul,
-.footer ol {
-  margin: unset;
-  padding: unset;
-}
-
-.footer a,
-.footer h2 {
-  color: currentColor;
-}
-
-.footer a {
-  word-break: break-word;
-  text-decoration: none;
-}
-
-.footer ul {
-  list-style-type: none;
-}
-
-.footer__nav-container {
-  margin-top: 5.0625rem;
-}
-
-@media only screen and (min-width: 77.5rem) {
-  .footer__nav-container {
-    margin-top: 0;
-  }
-}
-
-.footer__label {
-  margin-bottom: max(1.5rem, min(0.906149vw + 1.28762rem, 2.375rem));
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.footer__nav-container--gsap .footer__label {
-  color: var(--color-shockingly-green);
-}
-
-.footer__nav-container--scroll .footer__label {
-  color: var(--color-pink);
-}
-
-.footer__nav-container--svg .footer__label {
-  color: var(--color-orangey);
-}
-
-.footer__nav-container--ui .footer__label {
-  color: var(--color-blue);
-}
-
-.footer__nav-container--text .footer__label {
-  color: var(--color-lilac);
-}
-
-.footer__menu-item {
-  margin-top: 0.625rem;
-  font-size: max(1.125rem, min(0.441176vw + 0.783088rem, 1.3125rem));
-  font-weight: 600;
-  line-height: 1.15;
-}
-
-.footer-products .footer__menu-item {
-  font-weight: 400;
-  color: var(--color-surface-white);
-}
-
-.footer__menu-link,
-.footer-copy__menu-link {
-  transition: color 0.3s var(--ease-in-out-quart);
-}
-
-@media only screen and (min-width: 77.5rem) {
-  .footer__menu-link:hover,
-  .footer-copy__menu-link:hover {
-    color: var(--color-surface75);
-  }
-
-  .footer__nav-container--gsap .footer__menu-link:hover,
-  .footer__nav-container--gsap .footer-copy__menu-link:hover {
-    color: var(--color-shockingly-green);
-  }
-
-  .footer__nav-container--scroll .footer__menu-link:hover,
-  .footer__nav-container--scroll .footer-copy__menu-link:hover {
-    color: var(--color-pink);
-  }
-
-  .footer__nav-container--svg .footer__menu-link:hover,
-  .footer__nav-container--svg .footer-copy__menu-link:hover {
-    color: var(--color-orangey);
-  }
-
-  .footer__nav-container--ui .footer__menu-link:hover,
-  .footer__nav-container--ui .footer-copy__menu-link:hover {
-    color: var(--color-blue);
-  }
-
-  .footer__nav-container--text .footer__menu-link:hover,
-  .footer__nav-container--text .footer-copy__menu-link:hover {
-    color: var(--color-lilac);
-  }
-}
-
-.footer-copy,
-.footer-global {
   background-color: var(--color-surface-white);
   color: var(--color-just-black);
-}
 
-.footer-products .footer__label {
-  margin-bottom: 0.5rem;
-}
+  .container {
+    padding-bottom: max(3rem, min(1.0356vw + 2.75728rem, 4rem));
+    padding-top: max(3rem, min(1.0356vw + 2.75728rem, 4rem));
 
-.footer-products .footer__nav-container {
-  margin-top: 0;
-  margin-bottom: 2.5rem;
-}
+    .footer-top {
+      @include flex-between;
 
-.footer-products .footer__nav-container:last-child {
-  margin-bottom: 0;
-}
+      .profile-img {
+        display: flex;
+        height: 100%;
 
-@media only screen and (min-width: 77.5rem) {
-  .footer-products .footer__nav-container {
-    margin-bottom: 0;
-  }
-}
+        > div {
+          width: 200px;
+          height: 200px;
+          margin-right: 40px;
+          position: relative;
 
-.footer-global__form legend {
-  font-weight: 600;
-}
+          img {
+            width: 200px;
+            height: 200px;
+            max-width: 100%;
+            border-radius: 100%;
+            vertical-align: top;
+            object-fit: cover;
 
-.footer-global__email {
-  margin-top: max(2rem, min(2.0712vw + 1.51456rem, 4rem));
-  position: relative;
-}
+            &:nth-child(2) {
+              position: absolute;
+              bottom: 0;
+              right: 0;
+              width: 40%;
+              height: auto;
+              right: 0;
+              bottom: 25%;
+              transform: translate(25%, 50%);
+            }
+          }
+        }
 
-.footer-global__button {
-  z-index: 1;
-  cursor: pointer;
-  background: 0 0;
-  border: none;
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-}
+        .profile-info {
+          position: relative;
 
-.footer-global__button svg {
-  width: 100%;
-  max-width: 2.375rem;
-  display: block;
-}
+          div {
+            @include position-horizon-center;
 
-.footer-copy__text,
-.footer-copy__menu-item {
-  display: inline-block;
-}
+            h3 {
+              font-size: 2rem;
+              margin-bottom: 20px;
+            }
 
-.footer-copy__nav {
-  display: block;
-}
+            p {
+              line-height: 1.3rem;
+            }
+          }
+        }
+      }
 
-@media only screen and (min-width: 48rem) {
-  .footer-copy__nav {
-    display: inline-block;
+      .site-menu {
+        display: flex;
+        height: 100%;
+        padding-top: max(3rem, min(1.0356vw + 2.75728rem, 4rem));
+
+        div {
+          &:nth-child(1) {
+            margin-right: 50px;
+          }
+
+          p {
+            font-size: 16px;
+            font-weight: 600;
+            margin-bottom: 30px;
+          }
+          a {
+            display: block;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 2rem;
+          }
+        }
+      }
+    }
   }
 }
