🥸 반응형 진행중

--- a/src/assets/scss/section/_about.scss
+++ b/src/assets/scss/section/_about.scss
@@ -33,11 +33,11 @@
     }
 
     .subtitle__label {
-      width: 72px;
+      width: 4.1rem;
       font-weight: 600;
       letter-spacing: -0.01em;
       line-height: 1.2;
-      font-size: max(0.875rem, min(0.12945vw + 0.84466rem, 1rem));
+      font-size: 0.9rem;
     }
   }
 
