--- a/src/assets/scss/section/_projects.scss
+++ b/src/assets/scss/section/_projects.scss
@@ -38,12 +38,14 @@
     position: relative;
 
     .swiper {
+      position: relative;
       width: 180%;
-      margin-bottom: 20px;
+      margin-bottom: 2rem;
 
       .swiper-wrapper {
         .swiper-slide {
           transition: all 0.3s ease-in-out;
+          padding-bottom: 9.5rem;
 
           .projects-item {
             border-radius: 0.5rem;
@@ -60,7 +62,7 @@
 
           &.swiper-slide-active {
             transform: scale(0.9);
-            top: -23px;
+            top: -1.6vw;
             z-index: 2;
             opacity: 1;
           }
@@ -71,19 +73,79 @@
           }
         }
       }
+      .swiper-button-prev {
+        left: 61.2%;
+        width: 51px;
+        height: 51px;
+
+        > div {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background-image: url(../../img/prev_btn.svg);
+          background-repeat: no-repeat;
+          background-position: center;
+          transition: all 0.2s;
+        }
+
+        &:hover {
+          > div {
+            background-image: url(../../img/prev_btn-bk.svg);
+          }
+        }
+
+        &.button {
+          background-color: transparent;
+          width: 51px;
+          height: 51px;
+          box-sizing: border-box;
+          border: 2px solid #fff;
+        }
+      }
+
+      .swiper-button-next {
+        left: 61.6%;
+
+        > div {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background-image: url(../../img/next_btn.svg);
+          background-repeat: no-repeat;
+          background-position: center;
+          transition: all 0.2s;
+        }
+
+        &:hover {
+          > div {
+            background-image: url(../../img/next_btn-bk.svg);
+          }
+        }
+
+        &.button {
+          background-color: transparent;
+          width: 51px;
+          height: 51px;
+          box-sizing: border-box;
+          border: 2px solid #fff;
+        }
+      }
+
+      .swiper-button-prev:after,
+      .swiper-button-next:after {
+        content: "";
+      }
     }
 
     .projects__details {
+      position: absolute;
+      bottom: 0;
+      left: 0;
       margin: 0 auto;
-      margin-left: 63%;
+      margin-left: 35%;
+      width: 100%;
       height: auto;
 
-      @media only screen and (min-width: 48rem) {
-        // margin-top: -2vw;
-        // padding-left: 0;
-        // padding-right: 0;
-        // transform: translate(6.25%);
-      }
       .projects__title {
         font-size: max(1.25rem, min(0.2589vw + 1.18932rem, 1.5rem));
       }
@@ -96,10 +158,6 @@
         line-height: 1.4;
         margin-top: 10px;
         margin-bottom: 2rem;
-
-        @media only screen and (min-width: 77.5rem) {
-          // min-height: 4.8125rem;
-        }
       }
 
       .projects__menu-item--button {
@@ -107,6 +165,21 @@
           font-size: max(1rem, min(0.38835vw + 0.908981rem, 1.375rem));
           padding: 0.9375rem 1.5rem;
           border: 0.125rem solid var(--color-surface-white);
+
+          &:before {
+            width: 12rem;
+            height: 12rem;
+            border-radius: 12rem;
+            top: 4rem;
+            right: 8rem;
+          }
+
+          &:hover {
+            &:before {
+              top: -130%;
+              transform: translateX(70%);
+            }
+          }
 
           .button__label {
             padding-top: 2px;
@@ -118,5 +191,114 @@
         }
       }
     }
+
+    .projects__controls {
+      display: flex;
+      height: 51px;
+      // background-color: aliceblue;
+      position: absolute;
+      bottom: 0;
+      left: 110%;
+
+      .button {
+        background-color: transparent;
+        width: 51px;
+        height: 51px;
+        box-sizing: border-box;
+        border: 2px solid #fff;
+        --button-stroke: var(--color-surface-white);
+        --button-hoverColor: var(--color-just-black);
+
+        &:nth-child(1) {
+          margin-right: 12px;
+        }
+
+        .button__icon {
+          background-color: currentColor;
+          background-position: 50%;
+          background-repeat: no-repeat;
+          background-size: contain;
+          display: inline-block;
+          height: 1.5rem;
+          transition: color 50ms var(--ease-in-out-quart);
+          width: 1.5rem;
+        }
+
+        &:hover {
+          .button__icon-left {
+            transition: all 0.1s;
+            color: #000;
+            background-color: #000;
+          }
+
+          .button__icon-right {
+            transition: all 0.1s;
+            color: #000;
+            background-color: #000;
+          }
+        }
+
+        .button__icon-left {
+          width: 26px;
+          height: 26px;
+          -webkit-mask: url(../../img/prev_btn.svg);
+        }
+
+        .button__icon-right {
+          width: 26px;
+          height: 26px;
+          -webkit-mask: url(../../img/next_btn.svg);
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .home-projects .projects__wrap {
+    margin: 0 auto;
+    top: -22px;
+    left: 0%;
+    position: relative;
+  }
+
+  .home-projects .projects__wrap .swiper {
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+
+  .home-projects .projects__wrap .swiper .swiper-wrapper .swiper-slide.swiper-slide-active {
+    top: -0.5vw;
+  }
+
+  .home-projects .projects__wrap .swiper .swiper-wrapper .swiper-slide .projects-item {
+    width: 97%;
+    margin: 0 auto;
+  }
+
+  .home-projects .projects__wrap .projects__details {
+    padding-left: max(1.5rem, min(6.73139vw - 0.0776699rem, 8rem));
+    padding-right: max(1.5rem, min(6.73139vw - 0.0776699rem, 8rem));
+    margin-left: 0%;
+  }
+
+  .swiper-button-prev {
+    margin-right: 10px;
+    left: 79vw !important;
+  }
+
+  .swiper-button-next {
+    left: 79vw !important;
+  }
+}
+
+/* 모바일 세로 (해상도 ~ 479px)*/
+@media (max-width: 500px) {
+  .swiper-button-prev {
+    left: 71vw !important;
+  }
+
+  .swiper-button-next {
+    left: 70.8vw !important;
   }
 }
